<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp"
            >


            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/app_logo2"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_comment_edit_text_background"
                android:layout_marginBottom="30dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/name"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textStyle="normal"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_comment_edit_text_background"
                android:layout_marginBottom="30dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/email"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textStyle="normal"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_comment_edit_text_background"
                android:layout_marginBottom="30dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/password"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textStyle="normal"


                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_comment_edit_text_background"
                android:layout_marginBottom="30dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/mess_name"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textStyle="normal"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_comment_edit_text_background"
                android:layout_marginBottom="30dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/address"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textStyle="normal"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_comment_edit_text_background"
                android:layout_marginBottom="30dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/phone_num"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textStyle="normal"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:elevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_comment_edit_text_background"
                android:layout_marginBottom="30dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/seating_cap"
                    android:padding="10dp"
                    android:background="@drawable/edittext_background"
                    android:textStyle="normal"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/services"
                android:layout_marginTop="4dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiffin"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinning"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both"
                    android:layout_weight="1"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:layout_marginTop="4dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly"
                    android:layout_weight="2"/>

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning_timing"
                android:layout_marginTop="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/morning_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_7am"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:drawableLeft="@drawable/clock"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    />

                <Button
                    android:id="@+id/morning_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_11am"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:drawableLeft="@drawable/clock"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening_timing"
                android:layout_marginTop="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/evening_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_7pm"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:drawableLeft="@drawable/clock"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    />

                <Button
                    android:id="@+id/evening_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_11pm"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:drawableLeft="@drawable/clock"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:layout_marginTop="4dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:drawableTop="@drawable/baseline_add_photo_alternate_24"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/terms_1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_2"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/button"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/create"
                    android:textColor="@color/black"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_member" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/button"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>