<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:src="@drawable/app_logo"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:elevation="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/edit_comment_edit_text_background"
                    android:layout_marginBottom="30dp"
                    app:hintEnabled="false"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/email"
                        android:padding="10dp"
                        android:background="@drawable/edittext_background"
                        android:textStyle="normal"

                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout

                    android:elevation="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_comment_edit_text_background"
                    app:hintEnabled="false"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/password"
                        android:padding="10dp"
                        android:background="@drawable/edittext_background"
                        android:textStyle="normal"

                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:layout_gravity="end"
                android:paddingTop="8dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp">

                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:layout_gravity="center"

                    />

                <!--                <Button-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/continue_google"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    />-->

                <Button
                    android:id="@+id/log_in_with_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_google"
                    app:icon="@drawable/google"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="-16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_member"

                    />

                <TextView
                    android:id="@+id/linksignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/button"
                    android:layout_marginLeft="8dp"

                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>







</LinearLayout>